--- a/styles/index.css
+++ b/styles/index.css
@@ -6,7 +6,8 @@
 
 @layer utilities {
   body {
-    -ms-overflow-style: none;
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
     margin: 0;
     padding: 0;
     font-family: "Noto Sans TC", "Lusitana Normal", "Lusitana Bold", "cwTeXMing",
@@ -18,11 +19,27 @@
     background-color: transparent;
     width: 12px;
   }
+  body::-webkit-scrollbar {
+    -webkit-appearance: none;
+  }
+
+  body::-webkit-scrollbar:vertical {
+    width: 11px;
+  }
+
+  body::-webkit-scrollbar:horizontal {
+    height: 11px;
+  }
+
   body::-webkit-scrollbar-thumb {
-    background-color: inherit;
     border-radius: 8px;
-    background-clip: content-box;
-    border: 2px solid transparent;
+    border: 2px solid white; /* should match background, can't be transparent */
+    background-color: rgba(0, 0, 0, 0.5);
+  }
+
+  body::-webkit-scrollbar-track {
+    background-color: #fff;
+    border-radius: 8px;
   }
   .pb-safe {
     padding-bottom: constant(safe-area-inset-bottom);
