--- a/styles/index.css
+++ b/styles/index.css
@@ -41,6 +41,9 @@
     background-color: #fff;
     border-radius: 8px;
   }
+  .loading-text {
+    font-family: "Poiret One", cursive !important;
+  }
   .pb-safe {
     padding-bottom: constant(safe-area-inset-bottom);
     padding-bottom: env(safe-area-inset-bottom);
