--- a/styles/index.css
+++ b/styles/index.css
@@ -6,6 +6,7 @@
 
 @layer utilities {
   body {
+    font-size: 16px;
     -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none; /* Firefox */
     margin: 0;
